src/App.css
#gif-container {
  width: 100%;
}

#total-results {
  font-style: italic;
}

#bottom-panel {
  font-style: italic;
}

#grid {
  column-count: 3;
  column-gap: 0em;
}

/* Three image containers (use 25% for four, and 50% for two, etc) */
.column {
  display: inline-block;
  margin: 0 0 1em;
  width: 100%;
  height: 100%;
}

img {
  display: flex;
}

input[type=text] {
  width: 300px;
  box-sizing: border-box;
  border: 2px solid #ccc;
  border-radius: 4px;
  font-size: 16px;
  background-color: white;
  background-image: url('images/searchicon.png');
  background-position: 10px 10px;
  background-size: 20px;
  background-repeat: no-repeat;
  padding: 12px 20px 12px 40px;
/*  -webkit-transition: width 0.4s ease-in-out;
  transition: width 0.4s ease-in-out;*/
}

/*input[type=text]:focus {
  width: 100%;
}*/

#logo {
  float: left;
}

#searchbar {
}

.App {
  text-align: center;
}

.App-logo {
  height: 5vmin;
  pointer-events: none;
}

@media (prefers-reduced-motion: no-preference) {
  .App-logo {
    animation: App-logo-spin infinite 20s linear;
  }
}

.App-header {
  background-color: #282c34;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  /*justify-content: center;*/
  font-size: calc(10px + 2vmin);
  color: white;
  padding-top: 20px;
}

.App-link {
  border-left: 1000px;
  color: #61dafb;
}

@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

